# MainMenuVideo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CommonLibGhidra.py  README.md  _all_sigs.json  _verify_sigs.py  address_library.py  ccle_client.py  clang_ast_collect.py  clang_ast_reloc.py  clang_template_layouts.py  clang_types.py  clangd_template_layouts.py  extra_types.json  extract_relocations.py  extract_signatures.py  ghidra_import_gen.py  layouts_full.txt  parse_commonlib_types.py  pdb_symbols.py  reloc_parser.py  requirements.txt  run_headless.py  template_structural_rules.py  template_types.py  vcpkg.json
.github/workflows/: main.yml
Skyrim/Data/SKSE/Plugins/: po3_MainMenuVideo.ini
_clang_stubs/binary_io/: file_stream.hpp
_clang_stubs/spdlog/: spdlog.h
_clang_stubs/spdlog/details/: windows_include.h
cmake/: headerlist.cmake  sourcelist.cmake
cmake/ports/boost-unordered/: portfile.cmake  vcpkg.json
cmake/ports/clib-util/: portfile.cmake  vcpkg.json
plugin/: CMakeLists.txt  CMakePresets.json
plugin/src/: PCH.h
scripts/: parse_commonlib_types.py  pdb_symbols.py  run_headless.py
scripts/commonlibf4/: address_library.py  parse_commonlib_types.py  reloc_parser.py  run_headless.py
scripts/commonlibsse/: address_library.py  parse_commonlib_types.py  reloc_parser.py  run_headless.py
scripts/commonlibsse/_clang_stubs/binary_io/: file_stream.hpp
scripts/commonlibsse/_clang_stubs/spdlog/: spdlog.h
scripts/core/: clang_types.py  ghidra_import_gen.py  pdb_symbols.py  template_types.py
scripts/core/_clang_stubs/spdlog/details/: windows_include.h
src/: Hooks.cpp  Manager.cpp  Manager.h  PCH.h  VideoPlayer.cpp  VideoPlayer.h  main.cpp
src/ImGui/: Renderer.cpp  Renderer.h  Util.cpp  Util.h
